@@ -91,6 +91,9 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		'severity' => $Amanda::Message::ERROR,
 		'message' => "Can't open disk '$test_dir/does_not_exists': No such file or directory",
 		'diskname' => "$test_dir/does_not_exists",
+		'merrno' => '2',
+		'errnocode' => 'ENOENT',
+		'errnostr' => 'No such file or directory',
 		'process' => 'amgtar',
 		'running_on' => 'amanda-client',
 		'component' => 'application',
