@@ -1,3 +1,9 @@
+2016-02-02  Jean-Louis Martineau <martineau@zmanda.com>
+	* common-src/ammessage.c: Fix for errno in message
+	* installcheck/Amanda_Rest_Services_senddiscover_amgtar.pl,
+	  installcheck/Amanda_Rest_Amcheck.pl: Fix
+	* man/xml-source/amssl.8.xml: Improve documentation
+
 2016-02-01  Jean-Louis Martineau <martineau@zmanda.com>
 	* common-src/amutil.c: Fix for automatic test
 
